overflow fix, ready for deploy

--- a/public/app/scss/components/_hero.scss
+++ b/public/app/scss/components/_hero.scss
@@ -14,6 +14,7 @@
             gap: 0px;
             margin-top: 10px;
             align-items: center;
+            overflow-x: hidden;
         }
     }
 
