--- a/public/app/scss/index.css
+++ b/public/app/scss/index.css
@@ -178,6 +178,7 @@ h2 {
     gap: 0px;
     margin-top: 10px;
     align-items: center;
+    overflow-x: hidden;
   }
 }
 .hero__text {
